[package]
name = "rust-example-tower"
version = "0.1.0"
authors = ["Ricardo Moreira <ricardo.moreira@azion.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
cargo-edit = "0.7.0"
tower = "0.4"
log = "0.4"
tokio = { version = "1", features = ["full"]}
hyper = { version = "0.14", features = ["full"]}
warp = "0.2"